# RP1_m-z_speciesidentify

./: .gitignore  COL1A2 Final_filtered.fasta  LCMSMS_data.xlsx  PTM_rules_2.py  PinHoleDataset_SIMPER.zipDownload Zip.webloc  README.md  RatSeqeunce.txt  RcppExports.R  mass_iso.R  parseseq.R  parseseq_merge.R  parseseq_test.R  pyproject.toml  read_fasta.py  run_parseseq.R  run_theoretical_peps.sh  seq.csv  seq_merge.py  seq_to_atoms.cpp  species_identify.yml  test_result.csv
Compare_results/: README.md  compare.py  compare_NCBI.py  compare_correlation.py  compare_correlation_2.py  compare_correlation_3.py  compare_correlation_NCBI.py  compare_correlation_NCBI_fig.py  compare_correlation_NCBI_new.py  compare_correlation_NCBI_normal.py  compare_correlation_NCBI_test.py  compare_correlation_corr.py  compare_one.py  compare_one_correlation.py  correlation_analysis.py  matches.csv  matches_where.csv  peaks_fig.py  results_summary.py  run_multiple.sh  run_multiple_folders.sh  scoring_MOWSE_NCBI.py  test_results.csv  test_results2.csv  test_results2.xlsx
PTM_rules/: LCMSMS_bat.csv  LCMSMS_chicken.csv  LCMSMS_cod.csv  LCMSMS_dog.csv  LCMSMS_elephant.csv  LCMSMS_mouse.csv  Lysine_rules.xlsx  MultipleSpecies.xlsx  NQ_rules.xlsx  Proline_rules.xlsx  Score_sequence_coverage.py  results.csv  rules_check.py  rules_cigar_scoresK.py  rules_cigar_scoresNQ.py  rules_cigar_scoresP.py
Sequences/: CO1A1A2_combined_seqs.fasta  COL1A1A2_combined_seqs.fasta  COL1A1_seqs_clean.fasta  COL1A2_seqs_clean.fasta  fasta_A1_clean.py  fasta_A2_clean.py  fasta_seq_amendA1.py  fasta_seq_amendA1A2.py  (+4 more)
(+1874 files in other folders)
